changed large input boxes to textareas. This aligned the placeholder correctly

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -155,3 +155,6 @@ table, th, td {
 hr {
 
 }
+/*.red {
+  font-color: red;
+}*/
